// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateStateCpp can generate fixture ARRAY_PROPS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/ARRAY_PROPS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture ARRAY_PROPS_WITH_NESTED_OBJECT 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/ARRAY_PROPS_WITH_NESTED_OBJECT/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture BOOLEAN_PROP 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/BOOLEAN_PROP/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COLOR_PROP 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COLOR_PROP/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COMMANDS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COMMANDS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COMMANDS_AND_PROPS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COMMANDS_AND_PROPS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COMPONENT_WITH_ARRAY_OF_OBJECTS_STATE 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COMPONENT_WITH_ARRAY_OF_OBJECTS_STATE/States.h>

namespace facebook {
namespace react {

std::vector<SimpleComponentArrayStateStruct> SimpleComponentState::getArrayState() const {
  return arrayState_;
}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COMPONENT_WITH_ARRAY_STATE 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COMPONENT_WITH_ARRAY_STATE/States.h>

namespace facebook {
namespace react {

std::vector<std::string> SimpleComponentState::getNames() const {
  return names_;
}

std::vector<bool> SimpleComponentState::getDisableds() const {
  return disableds_;
}

std::vector<int> SimpleComponentState::getProgress() const {
  return progress_;
}

std::vector<Float> SimpleComponentState::getRadii() const {
  return radii_;
}

std::vector<SharedColor> SimpleComponentState::getColors() const {
  return colors_;
}

std::vector<ImageSource> SimpleComponentState::getSrcs() const {
  return srcs_;
}

std::vector<Point> SimpleComponentState::getPoints() const {
  return points_;
}

SimpleComponentSizesMask SimpleComponentState::getSizes() const {
  return sizes_;
}

std::vector<SimpleComponentObjectStruct> SimpleComponentState::getObject() const {
  return object_;
}

std::vector<SimpleComponentArrayStruct> SimpleComponentState::getArray() const {
  return array_;
}

std::vector<std::vector<SimpleComponentArrayOfArrayOfObjectStruct>> SimpleComponentState::getArrayOfArrayOfObject() const {
  return arrayOfArrayOfObject_;
}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COMPONENT_WITH_BOOL_STATE 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COMPONENT_WITH_BOOL_STATE/States.h>

namespace facebook {
namespace react {

bool SimpleComponentState::getDisabled() const {
  return disabled_;
}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COMPONENT_WITH_COLOR_STATE 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COMPONENT_WITH_COLOR_STATE/States.h>

namespace facebook {
namespace react {

SharedColor SimpleComponentState::getTintColor() const {
  return tintColor_;
}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COMPONENT_WITH_DOUBLE_STATE 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COMPONENT_WITH_DOUBLE_STATE/States.h>

namespace facebook {
namespace react {

double SimpleComponentState::getD_blurRadius() const {
  return d_blurRadius_;
}

double SimpleComponentState::getD_blurRadius2() const {
  return d_blurRadius2_;
}

double SimpleComponentState::getD_blurRadius3() const {
  return d_blurRadius3_;
}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COMPONENT_WITH_EDGE_INSET_STATE_PROPS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COMPONENT_WITH_EDGE_INSET_STATE_PROPS/States.h>

namespace facebook {
namespace react {

EdgeInsets SimpleComponentState::getContentInset() const {
  return contentInset_;
}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COMPONENT_WITH_FLOAT_STATE 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COMPONENT_WITH_FLOAT_STATE/States.h>

namespace facebook {
namespace react {

Float SimpleComponentState::getBlurRadius() const {
  return blurRadius_;
}

Float SimpleComponentState::getBlurRadius2() const {
  return blurRadius2_;
}

Float SimpleComponentState::getBlurRadius3() const {
  return blurRadius3_;
}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COMPONENT_WITH_IMAGE_STATE 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COMPONENT_WITH_IMAGE_STATE/States.h>

namespace facebook {
namespace react {

ImageSource SimpleComponentState::getThumbImage() const {
  return thumbImage_;
}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COMPONENT_WITH_INT_ENUM_STATE 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COMPONENT_WITH_INT_ENUM_STATE/States.h>

namespace facebook {
namespace react {

SimpleComponentMaxInterval SimpleComponentState::getMaxInterval() const {
  return maxInterval_;
}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COMPONENT_WITH_INT_STATE 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COMPONENT_WITH_INT_STATE/States.h>

namespace facebook {
namespace react {

int SimpleComponentState::getProgress1() const {
  return progress1_;
}

int SimpleComponentState::getProgress2() const {
  return progress2_;
}

int SimpleComponentState::getProgress3() const {
  return progress3_;
}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COMPONENT_WITH_OBJECT_STATE 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COMPONENT_WITH_OBJECT_STATE/States.h>

namespace facebook {
namespace react {

SimpleComponentObjectPropStruct SimpleComponentState::getObjectProp() const {
  return objectProp_;
}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COMPONENT_WITH_POINT_STATE 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COMPONENT_WITH_POINT_STATE/States.h>

namespace facebook {
namespace react {

Point SimpleComponentState::getStartPoint() const {
  return startPoint_;
}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COMPONENT_WITH_STRING_ENUM_STATE_PROPS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COMPONENT_WITH_STRING_ENUM_STATE_PROPS/States.h>

namespace facebook {
namespace react {

SimpleComponentAlignment SimpleComponentState::getAlignment() const {
  return alignment_;
}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COMPONENT_WITH_STRING_STATE 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COMPONENT_WITH_STRING_STATE/States.h>

namespace facebook {
namespace react {

std::string SimpleComponentState::getAccessibilityHint() const {
  return accessibilityHint_;
}

std::string SimpleComponentState::getAccessibilityRole() const {
  return accessibilityRole_;
}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COMPONENTS_WITH_IMAGES_IN_STATE 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COMPONENTS_WITH_IMAGES_IN_STATE/States.h>

namespace facebook {
namespace react {

ImageSource SimpleComponentState::getImageSource() const {
  return imageSource_;
}

ImageRequest const & SimpleComponentState::getImageRequest() const {
  return *imageRequest_;
}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture DOUBLE_PROPS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/DOUBLE_PROPS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture EVENT_NESTED_OBJECT_PROPS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/EVENT_NESTED_OBJECT_PROPS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture EVENT_PROPS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/EVENT_PROPS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture EVENTS_WITH_PAPER_NAME 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/EVENTS_WITH_PAPER_NAME/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture EXCLUDE_ANDROID 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/EXCLUDE_ANDROID/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture EXCLUDE_ANDROID_IOS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/EXCLUDE_ANDROID_IOS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture FLOAT_PROPS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/FLOAT_PROPS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture IMAGE_PROP 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/IMAGE_PROP/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture INSETS_PROP 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/INSETS_PROP/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture INT32_ENUM_PROP 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/INT32_ENUM_PROP/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture INTEGER_PROPS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/INTEGER_PROPS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture INTERFACE_ONLY 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/INTERFACE_ONLY/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture MULTI_NATIVE_PROP 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/MULTI_NATIVE_PROP/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture NO_PROPS_NO_EVENTS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/NO_PROPS_NO_EVENTS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture OBJECT_PROPS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/OBJECT_PROPS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture POINT_PROP 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/POINT_PROP/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture STRING_ENUM_PROP 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/STRING_ENUM_PROP/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture STRING_PROP 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/STRING_PROP/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/TWO_COMPONENTS_DIFFERENT_FILES/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture TWO_COMPONENTS_SAME_FILE 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/TWO_COMPONENTS_SAME_FILE/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;
